# snyk-to-md-rs

./: Cargo.toml  deny.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/markdown/: common_mark_generator.rs  gfm_generator.rs  mod.rs
crates/core/src/markdown/generator/: mod.rs
crates/core/src/markdown/generator/json/: mod.rs
crates/core/src/markdown/generator/json/common_mark/: mod.rs
crates/core/src/markdown/generator/json/gfm/: mod.rs
crates/core/src/markdown/generator/sarif/: mod.rs
crates/core/src/model/: mod.rs  security_report.rs
crates/core/src/parser/: mod.rs
crates/core/src/parser/code/: mod.rs
crates/core/src/parser/container/: container_parser.rs  mod.rs  model.rs
crates/core/src/parser/json/: mod.rs
crates/core/src/parser/json/code/: mod.rs
crates/core/src/parser/json/container/: container_parser.rs  mod.rs
crates/core/src/parser/sarif/: mod.rs
crates/core/templates/: macros.md  report.md  vulnerability.md
crates/serde_snyk_container/: LICENSE-APACHE.md  LICENSE-MIT.md  README.md  build.rs  cargo.toml  schema.json
crates/serde_snyk_container/src/: lib.rs  model.rs
crates/snyk-to-md/: Cargo.toml
crates/snyk-to-md/src/: cli.rs  main.rs
